update  correct addMeal service and  controller